# blend2d_shaping

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md
example/: main.cpp
src/: blend2d_shaping.cpp  blend2d_shaping.h
